# NICU

./: .env  .env.test  Cargo.toml  README.md  documentation.md  jest.config.js  package-lock.json  package.json  source.md  tauri.conf.json  vite.config.ts
backend/: .env  Cargo.toml  Rocket.toml  diesel.toml
backend/migrations/2025-02-22-093024_create_babies_table/: up.sql
backend/migrations/2025-02-22-093152_create_vitals_table/: down.sql  up.sql
backend/migrations/2025-02-22-093854_create_airway_options_table/: down.sql  up.sql
backend/migrations/2025-02-22-094521_create_cannula_sites_table/: up.sql
backend/migrations/2025-02-22-094831_create_inotropic_supports_table/: up.sql
backend/migrations/2025-02-22-112527_create_ventilator_settings_table/: down.sql  up.sql
backend/migrations/2025-02-22-112602_create_cpap_settings_table/: down.sql  up.sql
backend/migrations/2025-02-22-112608_create_hfov_settings_table/: down.sql  up.sql
backend/migrations/2025-02-22-112617_create_hfnc_settings_table/: down.sql  up.sql
backend/migrations/2025-02-22-112621_create_ventilator_assist_settings_table/: down.sql  up.sql
backend/migrations/2025-02-22-112624_create_ventilator_control_settings_table/: down.sql  up.sql
backend/migrations/2025-02-22-112641_create_inotropic_supports_table/: down.sql  up.sql
backend/migrations/2025-02-22-113152_create_cbcs_table/: down.sql  up.sql
backend/migrations/2025-02-22-113420_create_blood_gases_table/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/api/: airway_options.rs  api_response.rs  auth.rs  baby.rs  blood_gases.rs  cannula_sites.rs  cbc.rs  cpap_settings.rs  hfnc_settings.rs  hfov_settings.rs  inotropic_supports.rs  mod.rs  ventilator_assist_settings.rs  ventilator_control_settings.rs  ventilator_settings.rs  vitals.rs
backend/src/config/: config.rs
backend/src/db/: connection.rs  db.rs
backend/src/errors/: mod.rs
backend/src/middleware/: auth_middleware.rs
backend/src/models/: airway_options.rs  baby.rs  blood_gas.rs  cannula_sites.rs  cbc.rs  cpap_setting.rs  hfnc_setting.rs  hfov_setting.rs  inotropic_support.rs  inotropic_supports.rs  user.rs  ventilator_assist_setting.rs  ventilator_control_setting.rs  ventilator_setting.rs  vitals.rs
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/src/: main.rs
(+66 files in other folders)
