[package]
name = "nicu-workspace" # Changed from "nicu" to avoid duplicate names

[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
jsonwebtoken = "8.2"
dotenvy = "0.15"
r2d2 = "0.8.9"
tauri = { version = "2.2.5", features = [] }
tokio = { version = "1.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
