[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "chrono", "r2d2"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
bcrypt = "0.13"
jsonwebtoken = "8.2.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
