[package]
name = "nicu-tauri"
version = "0.1.0"
description = "NICU Application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.0.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
